# NijiEmu

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Application.cpp  Application.h
src/core/: Color.h  FileLoader.h  ResourceManager.cpp  ResourceManager.h
src/platform/: Platform.h  PlatformFactory.cpp  PlatformFactory.h  Platform_MacOSX.cpp  Platform_MacOSX.h  Platform_Win32.cpp  Platform_Win32.h
src/platform/interfaces/: IPlatform.h
src/platform/mac/: Platform_MacOSX.h  Platform_MacOSX.mm
src/platform/windows/: Platform_Win32.cpp  Platform_Win32.h
src/renderer/: Renderer.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h  Shader.cpp  Shader.h
src/renderer/gl/: Defines.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
src/renderer/interfaces/: IRenderer.h  IShader.h
src/renderer/metal/: MetalRenderer.h  MetalRenderer.mm
